--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,5 @@ sysinfo.txt
 *.unitypackage
 
 *.DS_Store
+
+Courses/2020 - 2021/FALL SEMESTER/2 DGM 3620 - Technical Direction and Design/Assignment 1 Monster's Inc/Full Render.psd
