--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,5 @@ sysinfo.txt
 *.DS_Store
 
 Courses/2020 - 2021/FALL SEMESTER/2 DGM 3620 - Technical Direction and Design/Assignment 1 Monster's Inc/Full Render.psd
+
+Courses/2020 - 2021/FALL SEMESTER/2 DGM 3620 - Technical Direction and Design/Monster In the Jar/Color Scropts.psd
