--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,9 @@ sysinfo.txt
 Courses/2020 - 2021/FALL SEMESTER/2 DGM 3620 - Technical Direction and Design/Assignment 1 Monster's Inc/Full Render.psd
 
 Courses/2020 - 2021/FALL SEMESTER/2 DGM 3620 - Technical Direction and Design/Monster In the Jar/Color Scropts.psd
+
+Courses/2020 - 2021/SPRING SEMESTER/Animated Short Work/BG test.psd
+
+Courses/2020 - 2021/SPRING SEMESTER/Animated Short Work/Star Story Flight Sequence A L.psd
+
+Courses/2020 - 2021/SPRING SEMESTER/Animated Short Work/Clouds.psd
